2008-03-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Date,Version): ready to release 0.999375-5

	* tests/simple.R: testing diagN2U

2008-03-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (diagN2U): interface to

	* src/Csparse.c (Csparse_diagN2U): .Call()able SEXP version of chm_diagN2U()

	* tests/matprod.R: test for triangularity preserving <dtC> %*% <dtC>

2008-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/chm_common.c (chm_diagN2U): new utility.

	* src/Csparse.c (Csparse_Csparse_crossprod, Csparse_Csparse_prod):
	make use of chm_diagN2U() and hence now preserve triangularity and
	unit-triangularity.

	* DESCRIPTION (LicenseDetails): new; such that 'License:' becomes "canonical"

2008-03-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (subDiag): fix when x[..] became a vector

	* src/Tsparse.c (Tsparse_diagU2N): new utility, necessary for e.g.
	* src/Csparse.c (Csparse_crossprod): use [CT]sparse_diagU2N() !!

	* R/Auxiliaries.R (.diagU2N): make use of new Tsparse_diagU2N

	* R/Ops.R ("-" (<sparseMatrix>)): use diagU2N()

	* src/chm_common.c (AS_CHM_FINISH): add note about problem
	for triangular (diag = "U").

2008-02-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (as_Csparse2): drop this, replacing by
	* R/bind.R:  .Call(dense_to_Csparse, *)

2008-02-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (Matrix): no longer use coercions to specific classes
		(since we are discouraging them in user code).

	* tests/*.R: also replaces coercions to specific classes by
	coercions to super classes.

	* R/denseMatrix.R (.dense2C): simplified by using forceSymmetric()


2008-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/CAex.Rd: example: coerce to symmetric*, not dsC*

	* src/dense.c (dense_band): generalized from ddense_band

	* R/ddenseMatrix.R (.trilDense,.triuDense, .bandDense):